--- a/netflix/package.json
+++ b/netflix/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "eslint": "^8.8.0",
     "firebase": "^9.6.6",
     "fuse.js": "^6.5.3",
     "normalize.css": "^8.0.1",
